kubernetes/apps/keyb/prod/steam-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-steam-provider
  namespace: keyb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-steam-provider
  template:
    metadata:
      labels:
        app: keycloak-steam-provider
        nfsMount: "true"
    spec:
      containers:
        - name: keycloak-steam-provider
          image: bokker/steam-openid-connect-provider:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
