kubernetes/apps/keyb/prod/steam-provider/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-steam-provider-service
  namespace: keyb
spec:
  selector:
    app: keycloak-steam-provider
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
