kubernetes/apps/keyb/prod/steam-provider/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: keyb
  name: keycloak-steam-provider-ingress
spec:
  ingressClassName: internal
  rules:
  - host: steam.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-steam-provider-service
            port:
              name: http
